--- a/hello-world-html.html
+++ b/hello-world-html.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
@@ -11,7 +12,7 @@
     <h1> Hello World </h1>
     <p>by Hayeong</p>
 
-    <h2> A program to greet the planet. </h2>
+    <h1> A program to greet the planet. </h1>
 
     <p>This page is an attempt to greet everyone on Earth using our various human languages.</p>
 
@@ -22,6 +23,8 @@
         <li> French: Bonjour, monde! </li>
         <li> Kinyarwanda: Mwirwe, isi! </li>
     </ul>
+
+    <a href="http://www.epicodus.com">EPICODUS</a>
 </body>
 
 </html>
